RESOLVED FIXED94122
win64 compile error fix for BinaryPropertyList.cpp
https://bugs.webkit.org/show_bug.cgi?id=94122
Summary win64 compile error fix for BinaryPropertyList.cpp
Alex Christensen
Reported 2012-08-15 10:33:32 PDT
BinaryPropertyList.cpp has calls to appendByte which cause compile errors when compiling with MSVC for a 64-bit machine. Since all the overloads of appendByte do the same thing which casts to an unsigned char anyway (see lines 392-414 of the same file), casting them before the call should not change performance (especially since the functions are inline) but it will allow compiling for win64. https://github.com/achristensen07/webkit64prep patch coming soon
Attachments
Patch (2.20 KB, patch)
2012-08-15 10:40 PDT, Alex Christensen
bfulgham: review-
bfulgham: commit-queue-
patch (2.23 KB, patch)
2012-08-16 11:20 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2012-08-15 10:40:07 PDT
Brent Fulgham
Comment 2 2012-08-15 20:47:05 PDT
Comment on attachment 158589 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=158589&action=review I think the intent of this change is good, but please switch to the more explicit C++-style cast; I think this is just a static_cast<>. > Source/WebCore/platform/cf/BinaryPropertyList.cpp:700 > + appendByte((unsigned char)(asciiStringMarkerByte | length)); We use C++-style casts in the Coding Guideline: static_cast<unsigned char>(asciiStringMarkerByte | length) > Source/WebCore/platform/cf/BinaryPropertyList.cpp:709 > + appendByte((unsigned char)(unicodeStringMarkerByte | length)); Ditto. > Source/WebCore/platform/cf/BinaryPropertyList.cpp:726 > + appendByte((unsigned char)(asciiStringMarkerByte | length)); Ditto
Alex Christensen
Comment 3 2012-08-16 11:20:21 PDT
WebKit Review Bot
Comment 4 2012-08-22 15:01:31 PDT
Comment on attachment 158855 [details] patch Clearing flags on attachment: 158855 Committed r126357: <http://trac.webkit.org/changeset/126357>
WebKit Review Bot
Comment 5 2012-08-22 15:01:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.