win64 compile error fix for BinaryPropertyList.cpp https://bugs.webkit.org/show_bug.cgi?id=94122

Patch by Alex Christensen <alex.christensen@flexsim.com> on 2012-08-22
Reviewed by Eric Seidel.

Fixed compile errors for MSVC x64 without changing performance

* platform/cf/BinaryPropertyList.cpp:
(WebCore::BinaryPropertyListSerializer::appendStringObject):

git-svn-id: svn://svn.chromium.org/blink/trunk@126357 bbb929c8-8fbe-4397-9dbb-9b2b20218538